# privateTV

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: privatetv.example.yml  tags.example.yml
docker/: config.yml
docs/: CONFIGURATION.md  DOCKER.md  INSTALL_RASPBERRY_PI_OS_TRIXIE.md  TVHEADEND.md  patch-01.md  patch-02.md  patch-03.md  patch-04.md  patch-05.md  patch-06.md  patch-07.md  patch-08.md  patch-09.md  patch-10.md  patch-11.md  patch-12.md  patch-13.md  patch-14.md  patch-15.md  patch-16.md  patch-17.md  patch-18.md  patch-19.md  patch-20.md  patch-21.md  patch-22.md  patch-23.md  patch-24.md  patch-25.md  patch-26.md  patch-27.md  patch-28.md  patch-29.md  patch-30.md  patch-35.md  patch-36.md  patch-37.md  patch-38.md  patch-39.md  patch-40.md  (+3 more)
packaging/logrotate/: privatetv
packaging/systemd/: README.md  privatetv-scan.service  privatetv-scan.timer  privatetv-schedule.service  privatetv-schedule.timer  privatetv.service
packaging/tmpfiles.d/: privatetv.conf
scripts/: cleanup-patch-12.sh  create_test_fixtures.sh  install-systemd.sh  prepare-production-layout.sh
src/privatetv/: __init__.py  __main__.py  cli.py
tests/unit/: test_catalog.py  test_config.py  test_database.py  test_database_migrations.py  test_dvd_structure_scanner.py  test_ffmpeg_streaming.py  test_generated_countdown.py  test_hazard.py  test_http_server.py  test_local_file_scanner.py  test_media_probe.py  test_media_repository.py  test_packaging.py  test_scan_resilience.py  test_schedule_builder.py  test_schedule_maintenance.py  (+10 more)
(+45 files in other folders)
